...
    case .youtubeHome: return "Hide YouTube Home"
    case .youtubeVideoSidebar: return "Hide Video Sidebar"
    case .youtubeRecommendations: return "Hide Recommended"
    case .youtubeLiveChat: return "Hide Live Chat"
    case .youtubePlaylists: return "Hide Playlists"
    case .youtubeFundraisers: return "Hide Fundraisers"
    case .youtubeEndScreens: return "Hide End Screen Feed"
    case .youtubeEndScreenCards: return "Hide End Screen Cards"
    case .youtubeShorts: return "Hide Shorts"
    case .youtubeComments: return "Hide Comments"
    case .youtubeMixes: return "Hide Mixes"
    case .youtubeMerch: return "Hide Merch, Tickets, Offers"
    case .youtubeVideoInfo: return "Hide Video Info"
    case .youtubeTopHeader: return "Hide Top Header"
    case .youtubeNotifications: return "Hide Notifications"
    case .youtubeSearch: return "Hide Inapt Search Results"
    case .youtubeExplore: return "Hide Explore and Trending"
    case .youtubeMoreFromYouTube: return "Hide More from YouTube"
    case .youtubeSubscriptions: return "Hide Subscriptions"
    case .youtubeAutoplay: return "Disable Autoplay"
    case .youtubeAnnotations: return "Disable Annotations"
    case .youtubeUsageTracking: return "Track YouTube Time"
    case .youtubeDailyLimit: return "Enforce Daily Time Limit"
    case .xSensitiveMedia: return "Hide Sensitive Media"
    case .xExplicitContent: return "Hide Explicit-Cue Posts"
    case .xExplicitSearch: return "Hide Explicit Search Results"
...
